Eikit alpha-numeric file, sorted layout issues

--- a/app.css
+++ b/app.css
@@ -14,10 +14,11 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px;
     text-align: center;
+    padding: 8px 0;
+    font-size: .8rem;
     /* Set the fixed height of the footer here */
-    line-height: 60px;
+    line-height: 20px;
     /* Vertically center the text there */
     background-color: #f5f5f5;
 }
@@ -141,9 +142,20 @@ div.en, .def {
 .mt-5, .my-5 {
     margin-top: 1.7rem !important;
 }
+.h1, h1 {
+    font-size: 1.8rem;
+}
 @media (min-width: 576px) {
     .grammar {
         display: inline;
         padding: 0;
+    }
+    .footer {
+        font-size: 1rem;
+        line-height: 24px;
+        padding: 17px 0;
+    }
+    .h1, h1 {
+        font-size: 2.5rem;
     }
 }
